Fix contact center alignment on safari

--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,10 @@ body, html {
 }
 
 .contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   list-style-type: none;
-  margin: 0 auto;
   padding: 0;
 }
 
